# photo-mover

./: Cargo.toml  README.md
src/: exif.rs  file.rs  main.rs  operation.rs
