[package]
name = "photo-mover"
author = "Kyle Pfromer <kpfromer2@gmail.com>"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
indicatif = "0.17.3"
lazy_static = "1.4.0"
walkdir = "2.3.2"
which = "4.4.0"
